# template_library

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp
apps/app1/: CMakeLists.txt  app.cpp  app_2_.hpp
cmake/: functions.cmake  libs.cmake
include/template_library/: template_library.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  testlib.cpp
